--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "develop": "gatsby develop",
     "build": "gatsby build",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "serve": "gatsby serve"
   },
   "dependencies": {
     "gatsby": "next",
     "react": "16.4.2",
     "react-dom": "16.4.2"
+  },
+  "devDependencies": {
+    "gh-pages": "1.2.0"
   }
 }
