--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "bootstrap": "4.1.3",
     "gatsby": "next",
+    "jquery": "3.3.1",
+    "popper.js": "1.14.4",
     "react": "16.4.2",
-    "react-dom": "16.4.2"
+    "react-dom": "16.4.2",
+    "reactstrap": "6.3.1"
   },
   "devDependencies": {
     "gh-pages": "1.2.0"
