--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bootstrap": "4.1.3",
     "gatsby": "next",
+    "gatsby-plugin-react-helmet": "2.0.11",
     "jquery": "3.3.1",
     "popper.js": "1.14.4",
     "react": "16.4.2",
     "react-dom": "16.4.2",
+    "react-helmet": "5.2.0",
     "reactstrap": "6.3.1"
   },
   "devDependencies": {
