--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "4.5.0",
-    "gatsby": "next",
+    "gatsby": "2.0.0",
     "gatsby-plugin-react-helmet": "3.3.10",
     "jquery": "3.5.1",
     "popper.js": "1.16.1",
